--- a/public/projects.html
+++ b/public/projects.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000">
     <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
@@ -25,7 +26,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -79,84 +80,33 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navbar navbar-fixed">
-            <article class="layout-contain-large navbar-layout">
-                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
-                    <section class="layout-spacer"></section>
-                    <section class="navbar-foot navbar-mobile">
-                        <section class="layout-inline-block"><button class="add-button btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-secondary style-hover-secondary-dark" tabindex="-1" type="button" title="Install App"><span class="btn-group"><i class="icon style-font-family-bold style-font-sz-24">add_circle_outline</i></span></button></section>
-                        <section class="layout-inline-block"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></button></section>
-                    </section>
-                </section>
-                <section class="layout-spacer navbar-desktop"></section>
-                <section class="navbar-main">
-                    <ul class="navbar-list" id="swup">
-                        <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
-                        <li><a class="navbar-link navbar-link-focus" href="/projects.html" data-swup-preload>projects</a></li>
-                        <li><a class="navbar-link" href="/contact.html" data-swup-preload>contact</a></li>
-                        <li class="navbar-desktop"><button class="add-button btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-secondary style-hover-secondary-dark" tabindex="-1" type="button" title="Install App"><span class="btn-group"><i class="icon style-font-family-bold style-font-sz-24">add_circle_outline</i><span class="btn-spacer"></span><span class="btn-content">Install</span></span></button></li>
-                    </ul>
-                </section>
-            </article>
-        </nav>
-    </header>
-    <div class="header-top-spot"></div>
-    <main class="main transition-fade" id="swup">
-        <section class="layer">
-            <article class="layout-contain-large layout-padding-horz-small layout-padding-bottom layout-padding-dull-top">
-                <div class="layer-hero">
-                    <div class="layer-image">
-                        <div class="load-img">
-                            <div class="img-contain">
-                                <picture>
-                                    <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_70,w_500/v1/blue-sky.webp" type="image/webp">
-                                    <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_70,w_500/v1/blue-sky.jpg" type="image/jpeg">
-                                    <source media="(max-width: 700px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_700/v1/blue-sky.webp" type="image/webp">
-                                    <source media="(max-width: 700px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_700/v1/blue-sky.jpg" type="image/jpeg">
-                                    <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.webp" type="image/webp">
-                                    <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.jpg" type="image/jpeg">
-                                    <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image" loading="lazy" width="auto"></picture>
-                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/blue-sky.jpg" alt="A city Image" inline loading="auto"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image" loading="lazy" width="auto"></noscript>
-                            </div>
-                        </div>
-                    </div>
-                    <section class="layout-enlarge">
-                        <div class="layer-content style-center">
-                            <section class="layer-header"></section>
-                            <section class="layer-main">
-                                <h1 class="style-font-title layer-title style-white">Projects.</h1><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button>
-                            </section>
-                        </div>
-                    </section>
+    <section class="layer">
+        <div class="layer-image">
+            <div class="load-img">
+                <div class="img-contain layout-contain layout-contain-slim">
+                    <picture><img src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_100,w_auto/v1/josephojo-logo.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/josephojo-logo.jpg" alt="Assets city" loading="lazy" width="auto"></noscript>
                 </div>
-            </article>
-        </section>
-        <section class="layer layout-padding-horz">
-            <article class="layout-shorten layout-contain">
-                <section class="layer-header style-center">
-                    <h4 class="style-primary-dark style-bold">Lorem itpsuim</h4>
-                </section>
-                <section class="layer-main"><span class="style-line-height-double"><span class="style-line-height-double layout-padding-vert-small layout-padding-top layout-margin-left-large layout-inline-block"> </span><span class="style-line-height-double layout-padding-vert-small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                            took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets
-                            containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum, </span><a class="layout-inline" href="/index.html" tabindex="0">home</a></span></section>
-            </article>
-        </section>
-        <section class="layer footer">
-            <article class="layout-contain">
-                <section class="layout-padding style-center style-spaceout-small style-font-weight-bold style-font-title"><span class="style-line-height-double layout-padding-vert-small">Made with ❤ by Okiki Ojo.</span></section>
-            </article>
-        </section>
-    </main>
-    <div class="layer-action-center layer-action-center-show">
-        <article>
-            <div class="layout-flex layout-padding-horz">
-                <section class="layout-spacer"></section>
-                <section><button class="btn layer-round layout-padding-small layer-surface layer-shadow layer-secondary-hover style-secondary style-hover-black" id="back-to-top" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-24">expand_less</i></span></button><button class="copyright-btn btn btn-default layer-round layout-padding-small layer-surface layer-shadow layer-secondary-hover style-secondary style-hover-black" id="swup" tabindex="0" type="button"><span class="btn-group style-font-sz-24"><i class="icon">copyright</i><span class="btn-spacer"></span><span class="btn-content">2019 Okiki Ojo</span></span></button></section>
             </div>
+        </div>
+        <div class="layer-image">
+            <div class="load-img">
+                <div class="img-contain">
+                    <picture>
+                        <source srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline width="auto" loading="lazy"></picture>
+                    <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_50/v1/mountains.jpg" alt="Assets city" inline loading="lazy"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/mountains.jpg" alt="Assets city" loading="lazy" width="auto"></noscript>
+                </div>
+            </div>
+        </div>
+        <article class="layout-contain">
+            <section class="layout layout-shorten layer-overflow-hide layer-max-height layout-flex layout-align-items-center layout-justify-content-start">
+                <section>
+                    <h3 class="style-secondary-dark style-font-title style-uppercase layout-margin-dull-vert layout-padding-vert-mini">Joseph</h3>
+                    <h1 class="style-white style-bold layer-title style-uppercase layout-margin-dull-vert-top">Coming SOON </h1>
+                    <h5 class="style-white style-line-height style-capital layer-content-detail">This website is currently in development. We are working day and night.</h5>
+                </section>
+            </section>
         </article>
-    </div>
+    </section>
     <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async></script>
     <script src="./js/app.vendor.min.js" inline defer></script>
 </body>
