--- a/public/projects.html
+++ b/public/projects.html
@@ -9,25 +9,26 @@
     <meta http-equiv="Content-Security-Policy" content="default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/okikio-assets/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' * blob: ws:; upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
-    <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/">
-    <link rel="preconnect" href="https://polyfill.io/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
+    <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/" crossorigin="">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin="">
+    <link rel="preconnect" href="https://polyfill.io/" crossorigin="">
     <link rel="manifest" href="manifest.webmanifest">
     <meta name="theme-color" content="#4500ff">
     <meta name="msapplication-TileColor" content="#4500ff">
-    <link rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" as="script" async="" crossorigin="anonymous">
-    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
-    <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="prefetch" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="prefetch" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="">
     <link rel="stylesheet" href="./css/app.min.css" inline="" async="">
+    <link rel="prefetch" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" as="script" crossorigin="">
+    <link rel="prefetch" href="./js/app.modern.min.js" as="script">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
-    <script> var check = function() { "use strict"; if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; } return true; }; var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); }; if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
+    <script> var check = function() { "use strict";  if (typeof window.Symbol == "undefined") return false; try { Function("class Foo {}")(); Function("let bar = x => x+1;")(); Function("let bez = { a: 'b' }; let box = { b: 'a', ...bez };")(); } catch (e) { return false; }  return true; };  var _require = function(src, fn) { var head = document.getElementsByTagName('head')[0]; var script = document.createElement('script'); script.setAttribute("async", ""); script.type = 'text/javascript'; script.onload = fn; script.onreadystatechange = function() { if (this.readyState === 'complete') { fn(); } }; script.src = src; head.appendChild(script); };  if (/msie|trident|edge/g.test(navigator.userAgent.toLowerCase()) || !check()) { _require("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.3/picturefill.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.min.js"); _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js"); } </script>
     <title>Projects</title>
 </head>
 
@@ -108,7 +109,7 @@
             </div>
         </article>
     </div>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" crossorigin="anonymous" async=""></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" crossorigin="" async=""></script>
     <script src="./js/app.modern.min.js" inline="" defer=""></script>
 </body>
 
